<resources>
    <string name="app_name">IMDB</string>
    <string name="title_activity_movie_detail">MovieDetailActivity</string>
    <string name="try_again">Try Again</string>
    <string name="title">Title:</string>
    <string name="runtime">Runtime:</string>
    <string name="release_date">Release Date:</string>
    <string name="vote_average">Vote Average:</string>
    <string name="vote_count">Vote Count:</string>
    <string name="over_view">Over View:</string>
    <string name="see_lists_where_it_appears">See Lists Where It Appears</string>
    <string name="see_recommendations">Recommendations</string>
    <string name="see_reviews">Reviews</string>
    <string name="see_cast">Cast</string>
    <string name="recommendation_text">Recommendations</string>
    <string name="movie_review">Movie Review</string>
    <string name="image_movie">image_movie</string>
    <string name="logo_the_movie_db">logo_themoviedb</string>
    <string name="text_home_login">Login</string>
    <string name="text_home_guest">Guest</string>
    <string name="title_home">Home</string>
    <string name="go_to_movie_button">Movie</string>
    <string name="go_to_tv_button">TV</string>
    <string name="no_favorites_yet">No Favorites Yet</string>
    <string name="title_movies">Movies</string>
    <string name="title_latest">Latest</string>
    <string name="now_playing">Now Playing</string>
    <string name="top_rated">Top Rated</string>
    <string name="popular">Popular</string>
    <string name="upcoming">Upcoming</string>
    <string name="starscore">StarScore</string>
    <string name="cast">Cast</string>
    <string name="image_cast">ImageCast</string>
    <string name="no_reviews">No Reviews</string>
    <string name="no_recommendation">No Recommendation</string>
    <string name="poster_img">poster_img</string>
    <string name="heart_empty">heart_empty</string>
    <string name="no_cast">No Cast</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="voltar">Voltar</string>
    <string name="text_rate_movie">Insira a sua Avaliação (0 a 10)</string>
    <string name="rate">Avaliar</string>
</resources>
