<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_screens"
    tools:context=".ui.movies.ratemovie.RateMovieActivity">

    <ImageView
            android:id="@+id/movie_post_img"
            android:layout_width="350dp"
            android:layout_height="300dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/image_movie"
            android:transitionName="@string/image_movie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher"/>

    <EditText
            android:id="@+id/rate"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/text_rate_movie"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_post_img" app:layout_constraintHorizontal_bias="0.0"/>

    <Button
            android:id="@+id/rate_button"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_movie_db"
            android:text="@string/rate"
            android:textColor="@color/imdb_text"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/rate"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
    />

</androidx.constraintlayout.widget.ConstraintLayout>