<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@drawable/background_screens">
    <ImageView
            android:layout_width="300dp"
            android:layout_height="250dp"
            app:srcCompat="@drawable/themoviedblogo"
            android:id="@+id/imageView2"
            android:layout_marginTop="76dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.493"
            android:contentDescription="@string/logo_the_movie_db"/>

    <Button
            android:text="@string/text_home_login"
            android:layout_width="353dp"
            android:layout_height="61dp"
            android:textSize="32sp"
            android:background="@drawable/button_movie_db"
            android:textColor="@color/imdb_text"
            android:id="@+id/button_login_home"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="122dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"/>

    <Button
            android:text="@string/text_home_guest"
            android:layout_width="353dp"
            android:layout_height="64dp"
            android:textSize="32sp"
            android:background="@drawable/button_movie_db"
            android:textColor="@color/imdb_text"
            android:id="@+id/guest"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/button_login_home"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="32dp" app:layout_constraintVertical_bias="0.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>
