<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/imdb_background_text2">

    <TextView
            tools:text="Arrival"
            android:layout_width="match_parent"
            android:textColor="@color/imdb_text"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:id="@+id/movie_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="1dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="1dp"
            app:layout_constraintHorizontal_bias="0.0"/>

    <ProgressBar android:layout_width="278dp"
                 android:layout_height="195dp"
                 android:layout_centerInParent="true"
                 android:indeterminate="true"
                 android:id="@+id/loading"
                 android:layout_marginTop="268dp"
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginEnd="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginStart="8dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintVertical_bias="0.18"
                 app:layout_constraintHorizontal_bias="0.495"/>

    <ImageView android:layout_width="154dp"
               android:layout_height="156dp"
               android:id="@+id/postImg"
               app:srcCompat="@mipmap/ic_launcher"
               android:transitionName="@string/image_movie"
               android:layout_marginTop="8dp"
               app:layout_constraintTop_toBottomOf="@+id/movie_title"
               android:layout_marginEnd="8dp"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintHorizontal_bias="0.0"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="22dp"
              android:text="@string/runtime"
              android:textColor="@color/imdb_text"
              android:textSize="20sp"
              android:id="@+id/runtime"
              android:layout_marginTop="8dp"
              app:layout_constraintTop_toBottomOf="@+id/votecount"
              app:layout_constraintStart_toEndOf="@+id/postImg"
              android:layout_marginStart="8dp"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="20sp"
              android:textColor="@color/imdb_text"
              android:text="@string/release_date"
              android:id="@+id/releasedate"
              android:layout_marginTop="8dp"
              app:layout_constraintTop_toBottomOf="@+id/runtime"
              app:layout_constraintStart_toEndOf="@+id/postImg"
              android:layout_marginStart="8dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vote_count"
            android:id="@+id/votecount"
            android:textSize="20sp"
            android:textColor="@color/imdb_text"
            app:layout_constraintStart_toEndOf="@+id/postImg"
            android:layout_marginStart="8dp"
            android:layout_marginTop="68dp"
            app:layout_constraintTop_toBottomOf="@+id/movie_title"/>

    <TextView
            android:layout_width="150dp"
            android:layout_height="41dp"
            android:textColor="@color/imdb_text"
            android:text="@string/over_view"
            android:textSize="@dimen/size_title_home_movies"
            android:textAlignment="center"
            android:id="@+id/overview"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/postImg"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            tools:text="lkasjdlskajdlkasjdlksadjlaskdjal"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:textColor="@color/imdb_text"
            android:textSize="14sp"
            android:textAlignment="center"
            android:id="@+id/overview_text"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/overview"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <Button
            android:layout_width="139dp"
            android:layout_height="41dp"
            android:id="@+id/reviews"
            android:text="@string/see_reviews"
            android:background="@color/imdb_background_text3"
            android:textColor="@color/imdb_text"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="96dp" app:layout_constraintTop_toBottomOf="@+id/latest"/>

    <Button
            android:layout_width="182dp"
            android:layout_height="38dp"
            android:id="@+id/recommendations"
            android:text="@string/see_recommendations"
            android:background="@color/imdb_background_text3"
            android:textColor="@color/imdb_text"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="96dp" app:layout_constraintTop_toBottomOf="@+id/latest"/>

    <Button android:layout_width="236dp"
            android:layout_height="67dp"
            android:text="@string/try_again"
            android:id="@+id/again"
            android:background="@color/imdb_background_text3"
            android:textColor="@color/imdb_text"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintVertical_bias="0.561"/>

    <ImageView
            android:layout_width="37dp"
            android:layout_height="42dp"
            app:srcCompat="@drawable/movie_score"
            android:id="@+id/first_star"
            android:contentDescription="@string/starscore"
            app:layout_constraintStart_toEndOf="@+id/postImg"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/movie_title"
            android:layout_marginStart="8dp"/>

    <ImageView
            android:layout_width="37dp"
            android:layout_height="42dp"
            app:srcCompat="@drawable/movie_score"
            android:id="@+id/second_star"
            android:contentDescription="@string/starscore"
            app:layout_constraintStart_toEndOf="@+id/first_star"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/movie_title"/>

    <ImageView
            android:layout_width="37dp"
            android:layout_height="42dp"
            app:srcCompat="@drawable/movie_score"
            android:id="@+id/third_star"
            android:contentDescription="@string/starscore"
            app:layout_constraintStart_toEndOf="@+id/second_star"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/movie_title"/>

    <ImageView
            android:layout_width="37dp"
            android:layout_height="42dp"
            android:contentDescription="@string/starscore"
            app:srcCompat="@drawable/movie_score"
            android:id="@+id/fourth_star"
            app:layout_constraintStart_toEndOf="@+id/third_star"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/movie_title"/>

    <ImageView
            android:layout_width="37dp"
            android:layout_height="42dp"
            app:srcCompat="@drawable/movie_score"
            android:id="@+id/fifth_star"
            android:contentDescription="@string/starscore"
            app:layout_constraintStart_toEndOf="@+id/fourth_star"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/movie_title"/>

    <TextView
            android:layout_width="150dp"
            android:layout_height="41dp"
            android:textColor="@color/imdb_text"
            android:text="@string/cast"
            android:textSize="@dimen/size_title_home_movies"
            android:textAlignment="center"
            android:id="@+id/cast"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/overview_text"/>

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="wrap_content"
            android:id="@+id/cast_recycler"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/cast" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.498">
    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>
