<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@color/imdb_background"
        android:layout_height="match_parent"
        tools:context=".ui.homemovies.HomeMoviesActivity">

    <TextView
            android:text="@string/title_movies"
            android:layout_width="match_parent"
            android:textColor="@color/imdb_text"
            android:background="@color/imdb_background_text2"
            android:textAlignment="center"
            android:textSize="54sp"
            android:layout_height="68dp"
            android:id="@+id/title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="1dp"/>

    <androidx.core.widget.NestedScrollView
            android:layout_marginTop="70dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintHorizontal_bias="1.0">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
            <TextView
                    android:text="@string/title_latest"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/imdb_text"
                    android:background="@color/imdb_background_text2"
                    android:textAlignment="center"
                    android:textSize="@dimen/size_title_home_movies"
                    android:layout_height="38dp"
                    android:id="@+id/title_latest"
                    app:layout_constraintTop_toBottomOf="@+id/title"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:id="@+id/latest"
                    android:layout_height="wrap_content">
            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                    android:text="@string/now_playing"
                    android:layout_width="match_parent"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/imdb_text"
                    android:background="@color/imdb_background_text2"
                    android:textAlignment="center"
                    android:textSize="@dimen/size_title_home_movies"
                    android:layout_height="38dp"
                    android:id="@+id/title_now_playing"
                    app:layout_constraintTop_toBottomOf="@+id/title"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:id="@+id/now_playing"
                    android:layout_height="wrap_content">
            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                    android:text="@string/popular"
                    android:layout_width="match_parent"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/imdb_text"
                    android:background="@color/imdb_background_text2"
                    android:textAlignment="center"
                    android:textSize="@dimen/size_title_home_movies"
                    android:layout_height="38dp"
                    android:id="@+id/title_popular"
                    app:layout_constraintTop_toBottomOf="@+id/title"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:id="@+id/popular"
                    android:layout_height="wrap_content">
            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                    android:text="@string/top_rated"
                    android:layout_width="match_parent"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/imdb_text"
                    android:background="@color/imdb_background_text2"
                    android:textAlignment="center"
                    android:textSize="@dimen/size_title_home_movies"
                    android:layout_height="38dp"
                    android:id="@+id/title_top_rated"
                    app:layout_constraintTop_toBottomOf="@+id/title"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:id="@+id/top_rated"
                    android:layout_height="wrap_content">
            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                    android:text="@string/upcoming"
                    android:layout_width="match_parent"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/imdb_text"
                    android:background="@color/imdb_background_text2"
                    android:textAlignment="center"
                    android:textSize="@dimen/size_title_home_movies"
                    android:layout_height="38dp"
                    android:id="@+id/title_upcoming"
                    app:layout_constraintTop_toBottomOf="@+id/title"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:id="@+id/upcoming"
                    android:layout_height="wrap_content">
            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>