<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <ImageView android:layout_width="320dp"
               android:layout_height="360dp"
               android:id="@+id/img"
               app:srcCompat="@mipmap/ic_launcher"
               app:layout_constraintStart_toStartOf="parent"
               android:transitionName="@string/image_movie"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintVertical_bias="0.0"
               android:contentDescription="@string/poster_img"
               android:layout_marginEnd="32dp" app:layout_constraintEnd_toEndOf="parent"
               android:layout_marginStart="32dp"/>

    <ProgressBar android:layout_width="246dp"
                 android:layout_height="231dp"
                 android:indeterminate="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="16dp"
                 android:id="@+id/loading"
                 android:layout_marginTop="8dp"
                 app:layout_constraintTop_toTopOf="@+id/img"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="8dp"
                 android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintHorizontal_bias="0.624"
                 app:layout_constraintVertical_bias="0.345"/>

    <Button android:layout_width="197dp"
            android:layout_height="89dp"
            android:text="@string/try_again"
            android:textColor="@color/imdb_text"
            android:background="@drawable/button2_movie_db"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/again"
            android:textSize="30sp"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.562"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.454"/>

    <TextView
            tools:text="@string/image_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/imdb_text"
            android:background="@color/imdb_background_text2"
            android:textAlignment="center"
            android:textSize="22sp"
            android:id="@+id/title_movie"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.54"/>

    <ImageView
            android:layout_width="76dp"
            android:layout_height="66dp"
            app:srcCompat="@drawable/heart_empty"
            android:id="@+id/heart_empty"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/heart_empty" android:layout_marginTop="8dp"/>

    <ImageView
            android:layout_width="76dp"
            android:layout_height="66dp"
            app:srcCompat="@drawable/heart"
            android:id="@+id/heart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/heart_empty" android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>